Update AbstractForceFurnaceBlockEntity.java